otel-wasi/tests/ui/fail/missing_service.stderr
error: #[wasi_instrument] requires `service = "..."`
 --> tests/ui/fail/missing_service.rs:4:4
  |
4 | fn missing_service() {}
  |    ^^^^^^^^^^^^^^^
